# ashuffle

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  args.c  args.h  array.c  array.h  ashuffle.c  contributing.md  list.h  meson.build  meson_options.txt  readme.md  rule.c  rule.h  shuffle.c
.github/: renovate.json
.github/workflows/: test.yaml
contrib/: readme.md
contrib/systemd/: ashuffle.service  readme.md
scripts/: build-test-image  check-format  cut-release  format  run-clang-tidy  run-integration
scripts/cross/: README.md  gcc-arm.tar.xz
scripts/github/: check-format  common.sh  lint  release  resolve-versions  unit-test
scripts/travis/: check-format  common.sh  lint  release  unit-test
src/: Makefile  args.c  args.cc  args.h  ashuffle.c  ashuffle.cc  ashuffle.h  getpass.c  getpass.cc  getpass.h  list.c  list.cc  list.h  load.cc  load.h  log.cc  log.h  log_internal.h  main.c  main.cc  mpd.cc  mpd.h  mpd_client.cc  mpd_client.h  rule.c  rule.cc  rule.h  shuffle.c  shuffle.cc  shuffle.h  util.c  util.cc  util.h  version.cc.in  version.h
src/t/: Makefile  list_test.c  shuffle_test.c
subprojects/: yaml-cpp.wrap
t/: args_test.c  args_test.cc  ashuffle_test.c  ashuffle_test.cc  helper.h  helpers.c  helpers.h  list_test.c  list_test.cc  load_test.cc  log_test.cc  meson.build  mpd_fake.h  mpd_fake_test.cc  mpdclient_fake.c  mpdclient_fake.cc  mpdclient_fake.h  poc_test.cc  readme.md  rule_test.c  rule_test.cc  shuffle_test.c  shuffle_test.cc  test_asserts.h
t/docker/: Dockerfile.alpine  Dockerfile.ubuntu  install_go.sh  run_integration.sh
t/docker/patches/: retain.md
t/docker/patches/0.19/pre-15/: 0001-DecoderBuffer-stdint.patch
t/docker/patches/mpd/0.21.20/: 0001-Support-newer-C-stdlibs.patch
t/docker/patches/mpd/0.23.5/: 0001-Support-newer-libc.patch
t/docker/scripts/: common.sh  install_go.sh  install_libmpdclient.sh  install_mpd.sh  run_integration.sh
t/integration/: go.mod  go.sum
t/integration/ashuffle/: ashuffle.go
t/integration/integration/: integration_test.go
t/integration/mpd/: mpd.go
t/integration/src/ashuffle/: ashuffle.go
t/integration/src/integration/: integration_test.go
t/integration/src/mpd/: mpd.go
t/integration/testashuffle/: testashuffle.go
t/integration/testmpd/: testmpd.go
t/static/: mpd.conf
t/static/tracks/: CREDITS.md
test/harness/src/integration/: integration_test.go
test/harness/src/mpd/: mpd.go
tools/cmake/: inject_project_source_dir.cmake
tools/meta/: go.mod  go.sum  meta.go
tools/meta/commands/libmpdclient/: libmpdclient.go
tools/meta/commands/mpd/: mpd.go
tools/meta/commands/release/: release.go
tools/meta/commands/resolveversions/: resolve_versions.go
tools/meta/commands/testbuild/: testbuild.go
tools/meta/crosstool/: crosstool.go
tools/meta/exec/: exec.go
tools/meta/fetch/: fetch.go
tools/meta/fileutil/: fileutil.go
tools/meta/project/: project.go
tools/meta/semver/: semver.go
tools/meta/versions/libmpdclientver/: libmpdclientver.go
tools/meta/versions/mpdver/: mpdver.go
tools/meta/workspace/: workspace.go
